# hr-portal

./: .env.sample  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  build.rs
docs/: auth.md  goals.md  signup.md
migrations/2019-12-24-025036_base_schema/: down.sql  up.sql
src/: main.rs
src/app/: mod.rs
src/authentication/: mod.rs
src/db/: schema.rs  views.rs
src/middleware/: mod.rs  request_logger.rs  security_headers.rs
src/status/: mod.rs
templates/: index.html.hbs  layout.html.hbs
