[package]
name = "mindshark_is_not_a_spreadsheet"
version = "0.1.0"
authors = ["Sam Stelfox <sstelfox@bedroomprogrammers.net>"]
edition = "2018"

[dependencies]
dotenv = { version = "0.15", default-features = false }
lazy_static = "1.4"
log = "0.4"

chrono = "0.4"
diesel = { version = "1.4", default-features = false, features = ["chrono", "postgres", "uuid"] }
diesel_migrations = "1.4"
fern = { version = "0.5" }
rocket = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# This needs to be explicitly specified for pulling in dependencies during a
# container build before we've injected the entire project
[[bin]]
name = "minas"
path = "src/main.rs"
